# snapfetcher

./: README.md  chains.csv  pyproject.toml
src/snapfetcher/: __init__.py  cli.py  ethpanda.py  external.py  polkachu.py  publicnode.py  selector.py  speedtest.py
tests/: test_cli.py  test_ethpanda.py  test_external.py  test_polkachu.py  test_publicnode.py  test_selector.py  test_speedtest.py
